<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prostage.lifecard.SendingDocumentsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/chooseDocumentToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center_horizontal"
            android:background="@color/color_toolbar">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/toolbar_sending_document"
                android:textColor="@color/black_text"
                android:textSize="18dp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/document_sending_content"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/document_sending_content_1"
            android:textSize="20dp" />

        <info.hoang8f.android.segmented.SegmentedGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            segmentedgroup:sc_border_width="1dp"
            segmentedgroup:sc_corner_radius="0dp"
            segmentedgroup:sc_tint_color="@color/background_image_4">

            <RadioButton
                android:id="@+id/button21"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="本人確認資料" />

            <RadioButton
                android:id="@+id/button22"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="所得証明" />
        </info.hoang8f.android.segmented.SegmentedGroup>

        <Spinner
            android:id="@+id/spinner_choose_document"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_border"
            android:padding="10dp"
            android:prompt="@string/spinner_title"
            android:spinnerMode="dropdown" />

        <LinearLayout
            android:id="@+id/layoutSending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/boder_text"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/explain_choose_document_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/explain_choose_document_1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/explain_choose_document_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/explain_choose_document_2"
                android:textSize="20dp"
                android:visibility="gone" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_choose_document"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:text="@string/next_button"
            android:textSize="20dp"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>
